#$Id: Makefile.am,v 1.1.1.1 2003/05/07 02:14:47 lfan Exp $
#
# Copyright 1998 - 2002 Double Precision, Inc.  See COPYING for
# distribution information.

AUTOMAKE = srcdir=${srcdir} @SHELL@ ${srcdir}/../automake.fix @AUTOMAKE@

noinst_LIBRARIES=libhttp11.a

libhttp11_a_SOURCES=contentlanguage.c http11.h
