dnl Process this file with autoconf to produce a configure script.
dnl
dnl Copyright 1998 - 1999 Double Precision, Inc.  See COPYING for
dnl distribution information.

AC_INIT(http11.h.in)

AM_INIT_AUTOMAKE(http11, 0.10)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

AC_ISC_POSIX
AC_AIX
AC_MINIX

if test "$GCC" = yes ; then
        CXXFLAGS="$CXXFLAGS -Wall"
        CFLAGS="$CFLAGS -Wall"
fi

dnl Checks for libraries.

AC_ARG_WITH(fcgi,
[  --without-fcgi      Do not compile fastcgi support
  --with-fcgi         Compile with fastcgi support],
	[ AC_CHECK_LIB(fcgi, FCGX_GetChar,
	CFLAGS="$CFLAGS -I.. -DHAVE_LIBFCGI=1" )] )

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.

AC_ARG_WITH(defaultlang,
	[  --with-defaultlang=lang        Default Content-Language:],
	DEFAULTLANG="$withval", DEFAULTLANG="en")
AC_SUBST(DEFAULTLANG)

AC_OUTPUT(Makefile  http11.h)
