# $Id: Makefile.am,v 1.1.1.1 2003/05/07 02:13:05 lfan Exp $
#
# Copyright 1998 - 2002 Double Precision, Inc.  See COPYING for
# distribution information.

AUTOMAKE = srcdir=${srcdir} @SHELL@ ${srcdir}/../automake.fix @AUTOMAKE@

noinst_LIBRARIES=libnumlib.a

libnumlib_a_SOURCES=numlib.h strhinot.c strhpidt.c strhtimet.c strgidt.c \
	strinot.c strofft.c strpidt.c strsize.c strsizet.c strtimet.c \
	changeuidgid.c struidt.c strdevt.c strhdevt.c
